# clicp

./: .$conceptualModeling_clicp.drawio.bkp  .gitignore  README.md  conceptualModeling_clicp.drawio  pyproject.toml
docs/: .$conceptualModeling_clicp.drawio.bkp  conceptualModeling_clicp.drawio
src/: database.py
src/clicp/: cli.py  database.py
src/clicp/commands/: add_platform.py  add_problem.py  delete_data_base.py  hello.py  init.py  stats.py
src/commands/: delete_data_base.py
