[tool.poetry]

packages = [{include = "src"}]

[project]
name = "clicp"
version = "0.1.0"
description = ""
authors = [
    {name = "IsaacMPereira",email = "isaacp.menezesp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer (>=0.25.1,<0.26.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clicp = "clicp.cli:main"