[tool.poetry]
packages = [
    { include = "clicp", from = "src" }
]

[project]
name = "clicp"
version = "0.1.0"
description = "Competitive programming CLI"
authors = [
    {name = "pratamz250", email = "isaacp.menezesp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.25.1,<0.26.0"
]

[project.scripts]
clicp = "clicp.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"